; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/blackfin/kernel/extr_dma-mapping.c_dma_map_sg.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/blackfin/kernel/extr_dma-mapping.c_dma_map_sg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.scatterlist = type { i64 }

@DMA_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dma_map_sg(%struct.device* %0, %struct.scatterlist* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.device*, align 8
  %6 = alloca %struct.scatterlist*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %5, align 8
  store %struct.scatterlist* %1, %struct.scatterlist** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %8, align 4
  %11 = load i32, i32* @DMA_NONE, align 4
  %12 = icmp eq i32 %10, %11
  %13 = zext i1 %12 to i32
  %14 = call i32 @BUG_ON(i32 %13)
  store i32 0, i32* %9, align 4
  br label %15

15:                                               ; preds = %32, %4
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* %7, align 4
  %18 = icmp slt i32 %16, %17
  br i1 %18, label %19, label %37

19:                                               ; preds = %15
  %20 = load %struct.scatterlist*, %struct.scatterlist** %6, align 8
  %21 = call i64 @sg_virt(%struct.scatterlist* %20)
  %22 = load %struct.scatterlist*, %struct.scatterlist** %6, align 8
  %23 = getelementptr inbounds %struct.scatterlist, %struct.scatterlist* %22, i32 0, i32 0
  store i64 %21, i64* %23, align 8
  %24 = load %struct.scatterlist*, %struct.scatterlist** %6, align 8
  %25 = call i64 @sg_dma_address(%struct.scatterlist* %24)
  %26 = load %struct.scatterlist*, %struct.scatterlist** %6, align 8
  %27 = call i64 @sg_dma_address(%struct.scatterlist* %26)
  %28 = load %struct.scatterlist*, %struct.scatterlist** %6, align 8
  %29 = call i64 @sg_dma_len(%struct.scatterlist* %28)
  %30 = add nsw i64 %27, %29
  %31 = call i32 @invalidate_dcache_range(i64 %25, i64 %30)
  br label %32

32:                                               ; preds = %19
  %33 = load i32, i32* %9, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %9, align 4
  %35 = load %struct.scatterlist*, %struct.scatterlist** %6, align 8
  %36 = getelementptr inbounds %struct.scatterlist, %struct.scatterlist* %35, i32 1
  store %struct.scatterlist* %36, %struct.scatterlist** %6, align 8
  br label %15

37:                                               ; preds = %15
  %38 = load i32, i32* %7, align 4
  ret i32 %38
}

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i64 @sg_virt(%struct.scatterlist*) #1

declare dso_local i32 @invalidate_dcache_range(i64, i64) #1

declare dso_local i64 @sg_dma_address(%struct.scatterlist*) #1

declare dso_local i64 @sg_dma_len(%struct.scatterlist*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
